--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
    "content_scripts": [{
     "matches": ["*://soundcloud.com/*"],
     "css":["css/klaut.css"],
-    "js":["js/klaut.js"]
+    "js":["js/writer.min.js", "js/klaut.js"]
   }],
 
   "page_action": {
